Fix alignment
Former-commit-id: 0c0ebd7947ab293aaf2318b72b269b43bd14d71f

--- a/components/button-group/button-group.scss
+++ b/components/button-group/button-group.scss
@@ -30,7 +30,6 @@
 .ring-button-group__caption {
   @include ring-font();
   margin-right: $ring-unit;
-  vertical-align: sub;
 
   &:empty {
     margin-right: 0;
